em progresso metodo para criar agendamentos de quadras